# mechabaraholka-bot

./: .dockerignore  .env example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker-image.yml
docs/superpowers/plans/: 2026-06-30-ghcr-image-build.md  2026-06-30-post-migration-cleanup.md  2026-06-30-rust-bot-port.md  2026-06-30-sqlite-migration.md
docs/superpowers/specs/: 2026-06-30-ghcr-image-build-design.md  2026-06-30-post-migration-cleanup-design.md  2026-06-30-rust-bot-port-design.md  2026-06-30-sqlite-migration-design.md
prisma/: schema.prisma
prisma/migrations/20250305163726_init/: migration.sql
src/: bot.rs  config.rs  db.rs  lib.rs  main.rs  main.ts  text.rs  voteban.rs
