[package]
name = "mechabaraholka-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "migrate"] }
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
temp-env = "0.3"
tempfile = "3.23"
